I'm in the middle of getting things into Brunch, which I'm using to build the Javascript browser portions (Thank you TomG for yet another excellent suggestion). Next step is figure out why the Leaflet map is discombobulated.

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,6 @@ target/
 
 #my notes
 whereami.txt
+
+#the static folder. Added after I started using Brunch. Brunch now builds what goes into this folder and there isn't a good reason I see right now to add what's in here to the repository.
+communitree_app/static/communitree_app/
